# a2a-rs

./: .gitignore  Cargo.toml  justfile
.github/workflows/: ci.yml  coverage.yml  itk-nightly.yaml  release-rust.yml
a2a/: CHANGELOG.md  Cargo.toml
a2a-client/: CHANGELOG.md  Cargo.toml
a2a-client/src/: agent_card.rs  client.rs  factory.rs  jsonrpc.rs  lib.rs  push_config_compat.rs  rest.rs  transport.rs
a2a-grpc/: CHANGELOG.md  Cargo.toml
a2a-grpc/src/: client.rs  lib.rs
a2a-grpc/tests/: e2e.rs
a2a-pb/: CHANGELOG.md  Cargo.toml  build.rs
a2a-pb/proto/: a2a.proto
a2a-pb/src/: pbconv.rs  protojson_conv.rs
a2a-pb/tests/: protojson.rs
a2a-server/: CHANGELOG.md  Cargo.toml
a2a-server/src/: handler.rs  jsonrpc.rs  lib.rs  middleware.rs  rest.rs
a2a-server/src/push/: sender.rs  store.rs
a2a-slimrpc/: CHANGELOG.md  Cargo.toml
a2a-slimrpc/src/: client.rs
a2a-slimrpc/tests/: e2e.rs
a2a-websocket/: CHANGELOG.md  Cargo.toml  README.md
a2a-websocket/src/: client.rs  common.rs  errors.rs  server.rs
a2a-websocket/tests/: e2e.rs
a2a/src/: types.rs
a2acli/: CHANGELOG.md  Cargo.toml
a2acli/src/: lib.rs
a2acli/tests/: e2e.rs
examples/: Cargo.toml  build.rs
examples/src/: lib.rs
examples/src/helloworld_tls/: client.rs  server.rs
examples/tests/: transports_e2e.rs
itk/: Cargo.toml  build.rs  process_results.py  run_itk.sh  scenarios.json  scenarios_full.json
