# Copyright AGNTCY Contributors (https://github.com/agntcy)
# SPDX-License-Identifier: Apache-2.0

[package]
name = "a2a-client-lf"
version = "0.1.17"
description = "A2A v1 async client with protocol binding factory"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "a2a_client"

[dependencies]
a2a = { workspace = true }
a2a-pb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
auto_impl = { workspace = true }
reqwest = { workspace = true }
bytes = "1"
tracing = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
pin-project-lite = { workspace = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "1", optional = true }

[dev-dependencies]
rcgen = { workspace = true }

[features]
# By default we will use aws-lc-rs as crypto provider.
default = ["rustls-tls-aws-lc-rs"]

# For application setting their own provider, we use rustls
# with NO crypto provider compiled in.
# Consumers selecting only this feature are responsible for installing a
# process-wide `CryptoProvider` (via `install_default()`) in their
# main function. If they don't do it, `reqwest::Client::new()` will panic with
# "no process-level CryptoProvider available".
rustls-tls = [
    "reqwest/rustls-tls-webpki-roots-no-provider",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
]

# If the consumer wants, a2a-client can also pull in a crypto provider and use it
# when creating the reqwest client.
rustls-tls-aws-lc-rs = ["rustls-tls", "rustls/aws-lc-rs"]
rustls-tls-ring = ["rustls-tls", "rustls/ring"]

native-tls = ["reqwest/native-tls"]
